@@ -27,5 +27,9 @@ Filters run the extent of a table unless you wrap your filter in a
 {@link org.apache.hadoop.hbase.filter.WhileMatchFilter}.
 The latter returns as soon as the filter stops matching.
 </p>
+<p>Do not rely on filters carrying state across rows; its not reliable in current
+hbase as we have no handlers in place for when regions split, close or server
+crashes.
+</p>
 */
 package org.apache.hadoop.hbase.filter;
