@@ -186,7 +186,7 @@ public interface HRegionInterface extends HBaseRPCProtocolVersion {
   /**
    * Get the next set of values
    * @param scannerId clientId passed to openScanner
-   * @return map of values
+   * @return map of values; returns null if no results.
    * @throws IOException
    */
   public Result next(long scannerId) throws IOException;
@@ -195,7 +195,9 @@ public interface HRegionInterface extends HBaseRPCProtocolVersion {
    * Get the next set of values
    * @param scannerId clientId passed to openScanner
    * @param numberOfRows the number of rows to fetch
-   * @return map of values
+   * @return Array of Results (map of values); array is empty if done with this
+   * region and null if we are NOT to go to the next region (happens when a
+   * filter rules that the scan is done).
    * @throws IOException
    */
   public Result [] next(long scannerId, int numberOfRows) throws IOException;
